// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimePeek renders default 1`] = `
<DocumentFragment>
  .c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c12 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c9::-moz-focus-inner {
  border-style: none;
}

.c9.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c10 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.c10:hover {
  background-color: rgba(255,255,255,0.08);
}

.c10.Mui-disabled {
  background-color: transparent;
  color: rgba(255,255,255,0.3);
}

.c10:hover {
  background-color: #3c3f43;
}

.c10.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c19 {
  gap: 8px;
}

.c18 {
  gap: 16px;
}

.c13 {
  gap: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c22 {
  gap: 8px;
}

.c33 {
  gap: 32px;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c7 {
  font-weight: 700;
  color: #bbbbbb;
  font-size: 0.7rem;
}

.c39 {
  -webkit-animation: fNPkvL 1500ms;
  animation: fNPkvL 1500ms;
}

.c45 {
  -webkit-animation: fNPkvL 3000ms;
  animation: fNPkvL 3000ms;
}

.c46 {
  -webkit-animation: fNPkvL 4500ms;
  animation: fNPkvL 4500ms;
}

.c47 {
  -webkit-animation: fNPkvL 6000ms;
  animation: fNPkvL 6000ms;
}

.c48 {
  -webkit-animation: fNPkvL 7500ms;
  animation: fNPkvL 7500ms;
}

.c28 {
  margin: 0;
  font-family: Quicksand,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
}

.c15 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c15.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c15:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c16 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c44 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c44:hover {
  z-index: 10;
}

.c41 {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.c42 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c42:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c49 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c49:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c40 {
  overflow-x: hidden;
  position: relative;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.c36 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c38 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c35 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

.c20 {
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  font-size: 1.1rem;
}

.c21 {
  color: rgba(233,235,240,0.8);
  font-size: 0.9rem;
}

.c25 {
  padding: 0 12px;
  font-size: 0.85rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 9ch;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  padding: 0 12px;
}

.c29 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  text-align: left;
  font-size: 0.85rem;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c23 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #612f2f;
}

.c23 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c23:hover .c24 {
  background-color: rgb(128,88,88);
}

.c23:hover .c26 {
  background-color: #3c3f43;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c30 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #427cb3;
}

.c30 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c30:hover .c24 {
  background-color: rgb(103,150,194);
}

.c30:hover .c26 {
  background-color: #3c3f43;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c31 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: rgb(55 92 95);
}

.c31 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c31:hover .c24 {
  background-color: rgb(95,NaN,NaN);
}

.c31:hover .c26 {
  background-color: #3c3f43;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c32 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: rgb(160 99 70);
}

.c32 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c32:hover .c24 {
  background-color: rgb(179,NaN,NaN);
}

.c32:hover .c26 {
  background-color: #3c3f43;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.c14 {
  min-width: 300px;
  max-width: 300px;
}

.c17 {
  margin-left: 16px;
  margin-right: 16px;
  opacity: 0.5;
}

.c2 {
  overflow-y: overlay;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.c3 {
  padding: 32px 64px;
}

@media print {
  .c9 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c10:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c15:hover {
    background-color: transparent;
  }
}

@media (max-width:1000px) {
  .c44 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c44 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c44 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<div
    class="c0 c1 c2"
    style="opacity: 1; overflow-x: hidden; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="c0 c1 c3"
      id="Some other prop"
      style="padding: 32px 64px; background-color: red;"
    >
      <div
        class="c0"
      >
        <div
          class="c4 c5"
        >
          <h2
            class="c6"
          >
            here goes title
          </h2>
          <h5
            class="c7"
          >
            Serie
          </h5>
          <div
            class="c8"
          />
          <button
            aria-label="Cerrar"
            class="c9 MuiButtonBase-root c10 MuiIconButton-root MuiIconButton-sizeMedium"
            data-mui-internal-clone-element="true"
            data-testid="anime-peek-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
              />
            </svg>
            <span
              class="c12 MuiTouchRipple-root"
            />
          </button>
        </div>
        <h5
          class="c7"
        >
          title1, title2
        </h5>
      </div>
      <div
        class="c4 c13"
      >
        <div
          class="c0 c1 c14"
        >
          <div
            style="position: relative;"
          >
            <div
              style="position: relative; width: 100%; overflow: hidden; border-radius: 8px; height: 425px;"
            >
              <img
                data-testid="image-bg-image"
                src="here goes image"
                style="width: 100%; height: 425px; object-fit: cover;"
              />
              <img
                class="makeStyles-fadeIn-2"
                data-testid="image-image"
                src="fake_image_url"
                style="width: 100%; height: 425px; object-fit: cover; position: absolute; inset: 0;"
              />
              <div
                data-testid="image-blur"
                style="background: rgba(200, 200, 200, 0.5); opacity: 0; transition: all 1000ms ease-in-out; position: absolute; inset: 0;"
              />
            </div>
            <button
              aria-label="Compartir anime"
              class="c9 MuiButtonBase-root c10 MuiIconButton-root MuiIconButton-sizeMedium"
              data-mui-internal-clone-element="true"
              style="bottom: 16px; left: 16px; position: absolute;"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="ShareIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
                />
              </svg>
              <span
                class="c12 MuiTouchRipple-root"
              />
            </button>
            <button
              class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15"
              style="pointer-events: none; background-color: rgb(61, 119, 61); bottom: 16px; right: 16px; position: absolute;"
              tabindex="0"
              type="button"
            >
              En emisión
              <span
                class="c12 MuiTouchRipple-root"
              />
            </button>
          </div>
          <hr
            class="c16 MuiDivider-root MuiDivider-fullWidth c17"
          />
          <div
            class="c4 c18"
            style="flex-wrap: wrap;"
          >
            <button
              class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15"
              tabindex="0"
              type="button"
            >
              tag1
              <span
                class="c12 MuiTouchRipple-root"
              />
            </button>
            <button
              class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15"
              tabindex="0"
              type="button"
            >
              tag2
              <span
                class="c12 MuiTouchRipple-root"
              />
            </button>
          </div>
          <hr
            class="c16 MuiDivider-root MuiDivider-fullWidth c17"
          />
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="CalendarTodayRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 3h-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1H7V2c0-.55-.45-1-1-1s-1 .45-1 1v1H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 18H5c-.55 0-1-.45-1-1V8h16v12c0 .55-.45 1-1 1z"
                />
              </svg>
              Emitido
            </h5>
            <div
              class="c21"
            >
              01/01/1970
            </div>
          </div>
          <hr
            class="c16 MuiDivider-root MuiDivider-fullWidth c17"
          />
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="AccountTreeRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 11h3c1.11 0 2-.9 2-2V5c0-1.11-.9-2-2-2h-3c-1.11 0-2 .9-2 2v1H9.01V5c0-1.11-.9-2-2-2H4c-1.1 0-2 .9-2 2v4c0 1.11.9 2 2 2h3c1.11 0 2-.9 2-2V8h2v7.01c0 1.65 1.34 2.99 2.99 2.99H15v1c0 1.11.9 2 2 2h3c1.11 0 2-.9 2-2v-4c0-1.11-.9-2-2-2h-3c-1.11 0-2 .9-2 2v1h-1.01c-.54 0-.99-.45-.99-.99V8h2v1c0 1.1.9 2 2 2z"
                />
              </svg>
              Relacionado
            </h5>
            <div
              class="c21"
            >
              <div
                class="c0 c22"
              >
                <button
                  btype="Ova"
                  class="c9 MuiButtonBase-root c23"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Ova
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c12 MuiTouchRipple-root"
                  />
                </button>
                <button
                  btype="Serie"
                  class="c9 MuiButtonBase-root c30"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Serie
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c12 MuiTouchRipple-root"
                  />
                </button>
                <button
                  btype="Película"
                  class="c9 MuiButtonBase-root c31"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Película
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c12 MuiTouchRipple-root"
                  />
                </button>
                <button
                  btype="Especial"
                  class="c9 MuiButtonBase-root c32"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Especial
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c12 MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c33"
          style="flex: 1;"
        >
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="MenuRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
                />
              </svg>
              Sinopsis
            </h5>
            <div
              class="c21"
            >
              <div
                style="text-align: justify;"
              >
                here goes description
              </div>
            </div>
          </div>
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="TvRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v1c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-1h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2zm-1 14H4c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h16c.55 0 1 .45 1 1v10c0 .55-.45 1-1 1z"
                />
              </svg>
              Episodios
            </h5>
            <div
              class="c21"
            >
              <div
                class="c0 c1"
              >
                <div
                  class="c4"
                  style="width: 100%; justify-content: flex-end; align-items: center;"
                >
                  <hr
                    class="c16 MuiDivider-root MuiDivider-fullWidth c34"
                  />
                  <div
                    aria-label="Ordenar ascendentemente"
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      class="c9 makeStyles-wrapper-6 MuiButtonBase-root"
                      data-testid="episodes-sort-button"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="makeStyles-common-3 makeStyles-secondary-5"
                      >
                        <svg
                          aria-hidden="true"
                          class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c35"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <line
                            stroke="currentColor"
                            stroke-width="3"
                            style="transform: scaleX(1);"
                            x1="0"
                            x2="24"
                            y1="4"
                            y2="4"
                          />
                          <line
                            stroke="currentColor"
                            stroke-width="3"
                            style="transform: scaleX(0.5);"
                            x1="0"
                            x2="24"
                            y1="12"
                            y2="12"
                          />
                          <line
                            stroke="currentColor"
                            stroke-width="3"
                            style="transform: scaleX(0.25);"
                            x1="0"
                            x2="24"
                            y1="20"
                            y2="20"
                          />
                        </svg>
                      </div>
                      <div
                        class="makeStyles-common-3 makeStyles-root-4"
                      >
                        Ordenar
                      </div>
                      <span
                        class="c12 MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="c0 c1"
                >
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 10
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 9
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 8
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 7
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 6
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 5
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 4
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 3
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 2
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 1
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c12 MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2
        class="c6"
        style="margin-left: 72px; margin-bottom: 8px;"
      >
        <div
          class="c39"
        >
          <div
            animation="pulse"
            variant="text"
          >
            Skeleton:Mock
          </div>
        </div>
      </h2>
      <div
        class="c40"
        style="width: 100vw;"
      >
        <div
          class="c0 c41"
          style="left: 0px; width: 72px;"
        >
          <button
            class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c15 c42"
            data-testid="navigation-button-button"
            direction="left"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="KeyboardArrowLeftRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c43"
          style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
        >
          <div
            class="c39"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 1;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c45"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.9;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c46"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.8;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c47"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.7;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c48"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.6;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c41"
          style="right: 0px; width: 72px;"
        >
          <button
            class="c9 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c15 c49"
            data-testid="navigation-button-button"
            direction="right"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c11 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="KeyboardArrowRightRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnimePeek renders default without onClose button 1`] = `
<DocumentFragment>
  .c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c14 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c11::-moz-focus-inner {
  border-style: none;
}

.c11.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c12 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.c12:hover {
  background-color: rgba(255,255,255,0.08);
}

.c12.Mui-disabled {
  background-color: transparent;
  color: rgba(255,255,255,0.3);
}

.c12:hover {
  background-color: #3c3f43;
}

.c12.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c19 {
  gap: 8px;
}

.c18 {
  gap: 16px;
}

.c9 {
  gap: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c22 {
  gap: 8px;
}

.c33 {
  gap: 32px;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c7 {
  font-weight: 700;
  color: #bbbbbb;
  font-size: 0.7rem;
}

.c39 {
  -webkit-animation: fNPkvL 1500ms;
  animation: fNPkvL 1500ms;
}

.c45 {
  -webkit-animation: fNPkvL 3000ms;
  animation: fNPkvL 3000ms;
}

.c46 {
  -webkit-animation: fNPkvL 4500ms;
  animation: fNPkvL 4500ms;
}

.c47 {
  -webkit-animation: fNPkvL 6000ms;
  animation: fNPkvL 6000ms;
}

.c48 {
  -webkit-animation: fNPkvL 7500ms;
  animation: fNPkvL 7500ms;
}

.c28 {
  margin: 0;
  font-family: Quicksand,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
}

.c15 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c15.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c15:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c16 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c44 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c44:hover {
  z-index: 10;
}

.c41 {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.c42 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c42:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c49 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c49:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c40 {
  overflow-x: hidden;
  position: relative;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.c36 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c38 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c35 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

.c20 {
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  font-size: 1.1rem;
}

.c21 {
  color: rgba(233,235,240,0.8);
  font-size: 0.9rem;
}

.c25 {
  padding: 0 12px;
  font-size: 0.85rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 9ch;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  padding: 0 12px;
}

.c29 {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  text-align: left;
  font-size: 0.85rem;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c23 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #612f2f;
}

.c23 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c23:hover .c24 {
  background-color: rgb(128,88,88);
}

.c23:hover .c26 {
  background-color: #3c3f43;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c30 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #427cb3;
}

.c30 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c30:hover .c24 {
  background-color: rgb(103,150,194);
}

.c30:hover .c26 {
  background-color: #3c3f43;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c31 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: rgb(55 92 95);
}

.c31 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c31:hover .c24 {
  background-color: rgb(95,NaN,NaN);
}

.c31:hover .c26 {
  background-color: #3c3f43;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: 36px;
}

.c32 .c24 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: rgb(160 99 70);
}

.c32 .c26 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #292d33;
}

.c32:hover .c24 {
  background-color: rgb(179,NaN,NaN);
}

.c32:hover .c26 {
  background-color: #3c3f43;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.c10 {
  min-width: 300px;
  max-width: 300px;
}

.c17 {
  margin-left: 16px;
  margin-right: 16px;
  opacity: 0.5;
}

.c2 {
  overflow-y: overlay;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.c3 {
  padding: 32px 64px;
}

@media print {
  .c11 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c12:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c15:hover {
    background-color: transparent;
  }
}

@media (max-width:1000px) {
  .c44 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c44 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c44 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<div
    class="c0 c1 c2"
    style="opacity: 1; overflow-x: hidden; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="c0 c1 c3"
      id="Some other prop"
      style="padding: 32px 64px; background-color: red;"
    >
      <div
        class="c0"
      >
        <div
          class="c4 c5"
        >
          <h2
            class="c6"
          >
            here goes title
          </h2>
          <h5
            class="c7"
          >
            Serie
          </h5>
          <div
            class="c8"
          />
        </div>
        <h5
          class="c7"
        >
          title1, title2
        </h5>
      </div>
      <div
        class="c4 c9"
      >
        <div
          class="c0 c1 c10"
        >
          <div
            style="position: relative;"
          >
            <div
              style="position: relative; width: 100%; overflow: hidden; border-radius: 8px; height: 425px;"
            >
              <img
                data-testid="image-bg-image"
                src="here goes image"
                style="width: 100%; height: 425px; object-fit: cover;"
              />
              <img
                class="makeStyles-fadeIn-8"
                data-testid="image-image"
                src="fake_image_url"
                style="width: 100%; height: 425px; object-fit: cover; position: absolute; inset: 0;"
              />
              <div
                data-testid="image-blur"
                style="background: rgba(200, 200, 200, 0.5); opacity: 0; transition: all 1000ms ease-in-out; position: absolute; inset: 0;"
              />
            </div>
            <button
              aria-label="Compartir anime"
              class="c11 MuiButtonBase-root c12 MuiIconButton-root MuiIconButton-sizeMedium"
              data-mui-internal-clone-element="true"
              style="bottom: 16px; left: 16px; position: absolute;"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="ShareIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
                />
              </svg>
              <span
                class="c14 MuiTouchRipple-root"
              />
            </button>
            <button
              class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15"
              style="pointer-events: none; background-color: rgb(61, 119, 61); bottom: 16px; right: 16px; position: absolute;"
              tabindex="0"
              type="button"
            >
              En emisión
              <span
                class="c14 MuiTouchRipple-root"
              />
            </button>
          </div>
          <hr
            class="c16 MuiDivider-root MuiDivider-fullWidth c17"
          />
          <div
            class="c4 c18"
            style="flex-wrap: wrap;"
          >
            <button
              class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15"
              tabindex="0"
              type="button"
            >
              tag1
              <span
                class="c14 MuiTouchRipple-root"
              />
            </button>
            <button
              class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15"
              tabindex="0"
              type="button"
            >
              tag2
              <span
                class="c14 MuiTouchRipple-root"
              />
            </button>
          </div>
          <hr
            class="c16 MuiDivider-root MuiDivider-fullWidth c17"
          />
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="CalendarTodayRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 3h-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1H7V2c0-.55-.45-1-1-1s-1 .45-1 1v1H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 18H5c-.55 0-1-.45-1-1V8h16v12c0 .55-.45 1-1 1z"
                />
              </svg>
              Emitido
            </h5>
            <div
              class="c21"
            >
              01/01/1970
            </div>
          </div>
          <hr
            class="c16 MuiDivider-root MuiDivider-fullWidth c17"
          />
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="AccountTreeRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 11h3c1.11 0 2-.9 2-2V5c0-1.11-.9-2-2-2h-3c-1.11 0-2 .9-2 2v1H9.01V5c0-1.11-.9-2-2-2H4c-1.1 0-2 .9-2 2v4c0 1.11.9 2 2 2h3c1.11 0 2-.9 2-2V8h2v7.01c0 1.65 1.34 2.99 2.99 2.99H15v1c0 1.11.9 2 2 2h3c1.11 0 2-.9 2-2v-4c0-1.11-.9-2-2-2h-3c-1.11 0-2 .9-2 2v1h-1.01c-.54 0-.99-.45-.99-.99V8h2v1c0 1.1.9 2 2 2z"
                />
              </svg>
              Relacionado
            </h5>
            <div
              class="c21"
            >
              <div
                class="c0 c22"
              >
                <button
                  btype="Ova"
                  class="c11 MuiButtonBase-root c23"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Ova
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c14 MuiTouchRipple-root"
                  />
                </button>
                <button
                  btype="Serie"
                  class="c11 MuiButtonBase-root c30"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Serie
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c14 MuiTouchRipple-root"
                  />
                </button>
                <button
                  btype="Película"
                  class="c11 MuiButtonBase-root c31"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Película
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c14 MuiTouchRipple-root"
                  />
                </button>
                <button
                  btype="Especial"
                  class="c11 MuiButtonBase-root c32"
                  data-testid="related-anime-button-button"
                  tabindex="0"
                  title="Related name"
                  type="button"
                >
                  <div
                    class="c24 c4 c25"
                  >
                    Especial
                  </div>
                  <div
                    class="c26 c4 c27"
                  >
                    <p
                      class="c28 MuiTypography-root MuiTypography-body1 c29"
                    >
                      Related name
                    </p>
                  </div>
                  <span
                    class="c14 MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c33"
          style="flex: 1;"
        >
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="MenuRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
                />
              </svg>
              Sinopsis
            </h5>
            <div
              class="c21"
            >
              <div
                style="text-align: justify;"
              >
                here goes description
              </div>
            </div>
          </div>
          <div
            class="c0 c1"
          >
            <h5
              class="c4 c19 c20"
            >
              <svg
                aria-hidden="true"
                class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="TvRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v1c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-1h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2zm-1 14H4c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h16c.55 0 1 .45 1 1v10c0 .55-.45 1-1 1z"
                />
              </svg>
              Episodios
            </h5>
            <div
              class="c21"
            >
              <div
                class="c0 c1"
              >
                <div
                  class="c4"
                  style="width: 100%; justify-content: flex-end; align-items: center;"
                >
                  <hr
                    class="c16 MuiDivider-root MuiDivider-fullWidth c34"
                  />
                  <div
                    aria-label="Ordenar ascendentemente"
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      class="c11 makeStyles-wrapper-12 MuiButtonBase-root"
                      data-testid="episodes-sort-button"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="makeStyles-common-9 makeStyles-secondary-11"
                      >
                        <svg
                          aria-hidden="true"
                          class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c35"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <line
                            stroke="currentColor"
                            stroke-width="3"
                            style="transform: scaleX(1);"
                            x1="0"
                            x2="24"
                            y1="4"
                            y2="4"
                          />
                          <line
                            stroke="currentColor"
                            stroke-width="3"
                            style="transform: scaleX(0.5);"
                            x1="0"
                            x2="24"
                            y1="12"
                            y2="12"
                          />
                          <line
                            stroke="currentColor"
                            stroke-width="3"
                            style="transform: scaleX(0.25);"
                            x1="0"
                            x2="24"
                            y1="20"
                            y2="20"
                          />
                        </svg>
                      </div>
                      <div
                        class="makeStyles-common-9 makeStyles-root-10"
                      >
                        Ordenar
                      </div>
                      <span
                        class="c14 MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="c0 c1"
                >
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 10
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 9
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 8
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 7
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 6
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 5
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 4
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 3
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 2
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-label="Ver episodio"
                    class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c15 c36"
                    data-mui-internal-clone-element="true"
                    data-testid="episode-button-watch-button"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c4 c18 c37"
                    >
                      <div>
                        Episodio 1
                      </div>
                      <div
                        class="c4 c18 c38"
                      />
                      <svg
                        aria-hidden="true"
                        class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                        data-testid="PlayArrowRoundedIcon"
                        focusable="false"
                        style="font-size: 1.4rem; overflow: hidden;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
                        />
                      </svg>
                    </div>
                    <span
                      class="c14 MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2
        class="c6"
        style="margin-left: 72px; margin-bottom: 8px;"
      >
        <div
          class="c39"
        >
          <div
            animation="pulse"
            variant="text"
          >
            Skeleton:Mock
          </div>
        </div>
      </h2>
      <div
        class="c40"
        style="width: 100vw;"
      >
        <div
          class="c0 c41"
          style="left: 0px; width: 72px;"
        >
          <button
            class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c15 c42"
            data-testid="navigation-button-button"
            direction="left"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="KeyboardArrowLeftRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c43"
          style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
        >
          <div
            class="c39"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 1;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c45"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.9;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c46"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.8;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c47"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.7;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
          <div
            class="c48"
          >
            <div
              class="c44"
              style="cursor: default; opacity: 0.6;"
            >
              <div
                animation="pulse"
                variant="rectangular"
              >
                Skeleton:Mock
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c41"
          style="right: 0px; width: 72px;"
        >
          <button
            class="c11 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c15 c49"
            data-testid="navigation-button-button"
            direction="right"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c13 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="KeyboardArrowRightRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
